ontol/ontol-compiler/test-cases/error/rel/only_entities_may_have_reverse_rel.on
def foo ()
def bar ()
rel {foo} 'a'[]::'aa' bar
rel {foo} 'b'::'bb' text // ERROR subject must be a domain type
